Fix the label and link alignment for the endpoints

--- a/rest-api-manager.css
+++ b/rest-api-manager.css
@@ -12,12 +12,13 @@ body.settings_page_rest_api_manager .form-table td {
 #rest-api-manager p {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  margin-bottom: 1rem;
+  /* gap: 1rem; */
 }
 #rest-api-manager label {
   display: flex;
   align-items: center;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   margin-right: 0.5rem;
   user-select: none;
   gap: 0.5rem;
